--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -116,3 +116,24 @@ p {
   font-style: italic;
   color: #fff;
 }
+
+.testimonial {
+  background-color: #c271ff;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 4.8rem;
+  padding-bottom: 4.8rem;
+}
+
+.testimonial-text {
+  padding-left: 2.4rem;
+}
+
+/*.testimonial-img {
+  float: left;
+}*/
+.testimonial-quote {
+  margin-bottom: 1.8rem;
+}
